1. add the check function for locally checking the signs and words in the DB list. 2. make a more rubust segmentation rule, and ATFID extraction rule. 3. text under python3.6 and python2.7

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ recursive-include pyoracc *.py
 include pyoracc/cdlimodel/support_files/*.txt
 include LICENSE.txt
 include README.md
+include pyoracc/tools/jsons/*.json
